--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^2.1.3",
+    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "redux-form": "^8.3.9",
     "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.7",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
