--- a/package.json
+++ b/package.json
@@ -6,17 +6,29 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux": "^3.6.0",
+    "@types/redux-form": "^8.3.5",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^1.2.1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "redux-form": "^8.3.9",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
@@ -43,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
